# Study-Buddy

./: README.md
studytool/: .gitignore  Cargo.toml
studytool/src/: ai_model.rs  main.rs  model_downloader.rs  semantic_checker.ipynb
