[package]
name = "studytool"
version = "0.1.0"
edition = "2021"
authors = ["Yigit Cem Akbas <yigitcem.akbas@gmail.com>"]
repository = "https://github.com/yigitcemakbas/Simple-Study-Tool"

[dependencies]
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = "2.0.0-rc.5"
ndarray = "0.16"